# voter-model-stochastic-resetting

./: .gitignore  DISCRETE_TIME_IMPLEMENTATION.md  DISCRETE_TIME_PERFORMANCE.md  DISCRETE_TIME_README.md  LICENSE  Manifest.toml  Project.toml  README.md  START_HERE.md  debug_output.txt  pyproject.toml  requirements-dev.txt  requirements.txt  tmp_search_variants.jl
DOCUMENTATION/: FPT_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  PROGRAM_FLOW.md
notebooks/: all_to_all_active_link_density.ipynb  all_to_all_first_passage_times.ipynb  all_to_all_uniform_resetting.ipynb  complete_network_magnetisation_simulation.ipynb  complete_network_simulation.ipynb  complex_delta_resetting.ipynb  complex_first_passage.ipynb  first_passage_times.ipynb  gleeson_numeric.ipynb  mfpt_analysis.ipynb  solution_checking.ipynb  test_plotting.ipynb
notebooks/all_to_all/: all_to_all_delta_resetting.ipynb  all_to_all_first_passage_times.ipynb  all_to_all_uniform_resetting.ipynb  discrete_vm_phase_space.ipynb  julia_mfpt_theory_vs_sim_sweep.ipynb  mfpt_bifurcation.ipynb  mfpt_discrete_spectral_vs_r.ipynb  mfpt_theory_vs_sim.ipynb
notebooks/complex/: complex_delta_pdf_parameter_sweep.ipynb  julia_complex_delta_resetting.ipynb  julia_mfpt_vs_m0_network_protocol_comparison.ipynb  julia_rrg_k4_sikm_evolution.ipynb  mfpt_section_vi_spectral_vs_m0.ipynb  mfpt_vs_m0_network_protocol_comparison.ipynb  plotting.ipynb  rho_comparison_theory_simulation.ipynb  rho_framework_diagnostics.ipynb  rho_numerical_integration.ipynb
notebooks/deprecated/python/: all_to_all_first_passage_times.ipynb
scripts/: solution.py  solution_fpt.py  theory_mfpt_vs_r_slider.py  utils.py
src/: VoterModel.jl  VoterResetting.jl  discrete_time_voter.jl
src/all_to_all/: discrete_simulation.jl  fpt_simulation.jl  pdf_simulation.jl  theory_solution.jl
src/common/: simulation_core.jl
src/complex/: ame_solution.jl  fpt_simulation.jl  heterogeneous_spectral.jl  pdf_simulation.jl  sikm_simulation.jl
tests/: test_fpt.py  test_solution.py
voter_model/: __init__.py  solution.py  solution_fpt.py  utils.py
