[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voter-model-stochastic-resetting"
version = "0.1.0"
description = "Analytical solutions and simulations for the voter model with stochastic resetting"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Gerard Argany" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "networkx>=3.1",
    "numba>=0.57",
    "jupyter>=1.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["voter_model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
